# borgbackup

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: linux.yml
borg-examples/: Cargo.toml
borg-examples/src/: main.rs
src/: common.rs  errors.rs  lib.rs  utils.rs
src/asynchronous/: compact.rs  create.rs  extract.rs  init.rs  list.rs  mod.rs  mount.rs  prune.rs
src/commands/: common.rs  compact.rs  create.rs  init.rs  list.rs  mod.rs  prune.rs
src/output/: common.rs  create.rs  info.rs  list.rs  logging.rs  mod.rs
src/sync/: compact.rs  create.rs  extract.rs  init.rs  list.rs  mod.rs  mount.rs  prune.rs
