[package]
name = "borgbackup"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/myOmikron/borgbackup"
authors = ["Niklas Pfister <git@omikron.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
