[package]
name = "borgbackup"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/myOmikron/borgbackup"
authors = ["Niklas Pfister <git@omikron.dev>"]
description = "A wapper for the borgbackup utility"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serialization library
serde = { version = "~1", features = ["derive"] }
serde_json = { version = "~1" }
# Datetime support
chrono = { version = ">=0.4.20", features = ["serde"] }

[features]
vendored = []
