[workspace]
members = [
    ".",
    "./borg-examples",
]

[package]
name = "borgbackup"
version = "0.5.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/myOmikron/borgbackup"
authors = ["Niklas Pfister <git@omikron.dev>"]
description = "A wapper for the borgbackup utility"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serialization library
serde = { version = "~1", features = ["derive"] }
serde_json = { version = "~1" }
# Datetime support
chrono = { version = ">=0.4.20", features = ["serde"] }

# Posix command splitting and joining support
shlex = { version = "~1" }

# Logging facade
log = { version = "~0.4" }

# Async runtime, used for async process
tokio = { version = ">=1.23.1", features = ["process", "macros", "io-util", "sync"], optional = true }

[build-dependencies]
rustc_version = "0.4.0"

[dev-dependencies]
tempfile = { version = "~3" }

[package.metadata.docs.rs]
all-features = true

[features]
vendored = []
tokio = ["dep:tokio"]
