[package]
name = "borg-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = { version = "~3" }

log = { version = "~0.4" }
env_logger = { version = "~0.10" }

borgbackup = { version = "~0.1", path = ".." }